--- a/ui.html
+++ b/ui.html
@@ -15,7 +15,7 @@
       	    <section class="discription">
       	    	<div class="form-group">
     				<label class="label-text" for="exampleFormControlTextarea1">DESCRIPTION</label>
-    				<textarea placeholder="enter description.." class="form-control" id="exampleFormControlTextarea1" rows="1.5"></textarea>
+    				<textarea placeholder="enter description.." class="form-control" id="exampleFormControlTextarea1" rows="2"></textarea>
   				</div>
       	    </section>
 
@@ -29,8 +29,8 @@
       								<option selected disabled="">Choose a category</option>
       								<option>SCHOOL</option>
       								<option>WORK</option>
-      								<option>3</option>
-      								<option>4</option>
+      								<option>PERSONAL</option>
+      								<option>DAILY</option>
       								<option>5</option>
     							</select>
   						</div>
@@ -53,7 +53,65 @@
 
 
       	    <section class="list-container">
-      	    	
+      	    	<ul class="list-group">
+					  <li class="list-group-item">
+					  	<div class="date-and-details">
+					  		<div class="check-btn">
+					  			<input id="inp" class="" type="checkbox">
+					  		</div>
+					  		<div >
+					  			<p class="discription-display">Lets make a todo app</p>
+      					    	<p ><i class="fas fa-calendar-alt"></i>  APR,15,2020</p>
+					  		</div>
+					  	</div>
+					  	<div class="type-tag">
+					  		<p class="work">WORK</p>
+					  	</div>
+					  </li>
+					  <li class="list-group-item">
+					  	<div class="date-and-details">
+					  		<div class="check-btn">
+					  			<input id="inp" class="" type="checkbox">
+					  		</div>
+					  		<div >
+					  			<p class="discription-display">Lets make a todo app</p>
+      					    	<p ><i class="fas fa-calendar-alt"></i>  APR,15,2020</p>
+					  		</div>
+					  	</div>
+					  	<div class="type-tag">
+					  		<p class="personal">PERSONAL</p>
+					  	</div>
+					  </li>
+					  <li class="list-group-item">
+					  	 <div class="date-and-details">
+					  		<div class="check-btn">
+					  			<input id="inp" class="" type="checkbox">
+					  		</div>
+					  		<div >
+					  			<p class="discription-display">Lets make a todo app</p>
+      					    	<p ><i class="fas fa-calendar-alt"></i>  APR,15,2020</p>
+					  		</div>
+					  	</div>
+					  	<div class="type-tag">
+					  		<p class="school">SCHOOL</p>
+					  	</div>
+					  </li>
+					  <li class="list-group-item">
+					  	<div class="date-and-details">
+					  		<div class="check-btn">
+					  			<input id="inp" class="" type="checkbox">
+					  		</div>
+					  		<div >
+					  			<p class="discription-display">Lets make a todo app</p>
+      					    	<p ><i class="fas fa-calendar-alt"></i>  APR,15,2020</p>
+					  		</div>
+					  	</div>
+					  	<div class="type-tag">
+					  		<p class="home">HOME</p>
+					  	</div>
+					  </li>
+					  <li class="list-group-item">Vestibulum at eros</li>
+				</ul>
       	    </section>
       	</main>
 	 </div>
